--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,7 +8,8 @@
   <title>Bicicletas | Bikcraft </title>
   <meta name="description" content="Bicicletas.">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.css" as="style">
+    <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
@@ -43,7 +44,7 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta" width="1120" height="680">
         <span class="font-2-m cor-0">R$4999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -52,16 +53,16 @@
           os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="img/icones/eletrica.svg" alt="">Motor Elétrico
+            <img src="img/icones/eletrica.svg" alt="" width="32" height="32">Motor Elétrico
           </li>
           <li>
-            <img src="img/icones/carbono.svg" alt="">Fibra de Carbono
+            <img src="img/icones/carbono.svg" alt="" width="32" height="32">Fibra de Carbono
           </li>
           <li>
-            <img src="img/icones/velocidade.svg" alt="">50 km/h
+            <img src="img/icones/velocidade.svg" alt="" width="32" height="32">50 km/h
           </li>
           <li>
-            <img src="img/icones/rastreador.svg" alt="">Rastreador
+            <img src="img/icones/rastreador.svg" alt="" width="32" height="32">Rastreador
           </li>
         </ul>
         <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
@@ -71,7 +72,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Branca">
+          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Branca" width="1120" height="680">
           <span class="font-2-m cor-0">R$2499</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -80,16 +81,16 @@
             os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
-              <img src="img/icones/eletrica.svg" alt="">Motor Elétrico
+              <img src="img/icones/eletrica.svg" alt=""  width="32" height="32">Motor Elétrico
             </li>
             <li>
-              <img src="img/icones/carbono.svg" alt="">Fibra de Carbono
+              <img src="img/icones/carbono.svg" alt=""  width="32" height="32">Fibra de Carbono
             </li>
             <li>
-              <img src="img/icones/velocidade.svg" alt="">45 km/h
+              <img src="img/icones/velocidade.svg" alt=""  width="32" height="32">45 km/h
             </li>
             <li>
-              <img src="img/icones/rastreador.svg" alt="">Rastreador
+              <img src="img/icones/rastreador.svg" alt=""  width="32" height="32">Rastreador
             </li>
           </ul>
           <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
@@ -99,7 +100,7 @@
 
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Preta">
+        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Preta" width="1120" height="680">
         <span class="font-2-m cor-0">R$3999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -108,16 +109,16 @@
           os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="img/icones/eletrica.svg" alt="">Motor Elétrico
+            <img src="img/icones/eletrica.svg" alt="" width="32" height="32">Motor Elétrico
           </li>
           <li>
-            <img src="img/icones/carbono.svg" alt="">Fibra de Carbono
+            <img src="img/icones/carbono.svg" alt="" width="32" height="32">Fibra de Carbono
           </li>
           <li>
-            <img src="img/icones/velocidade.svg" alt="">50 km/h
+            <img src="img/icones/velocidade.svg" alt="" width="32" height="32">50 km/h
           </li>
           <li>
-            <img src="img/icones/rastreador.svg" alt="">Rastreador
+            <img src="img/icones/rastreador.svg" alt="" width="32" height="32">Rastreador
           </li>
         </ul>
         <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
@@ -127,7 +128,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" alt="Bikcraft" width="136" height="32">
 
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
@@ -139,13 +140,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+            <img src="./img/redes/instagram.svg" alt="Instagram" width="32" height="32">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg" alt="Facebook" width="32" height="32">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg" alt="Youtube" width="32" height="32">
           </a>
         </div>
       </div>
