--- a/contato.html
+++ b/contato.html
@@ -16,6 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap"
     rel="stylesheet">
+<script>document.documentElement.classList.add('js');</script>    
 </head>
 
 <body id="contato">
@@ -164,4 +165,5 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+<script src="./js/script.js"></script>
 </body>
