--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
+
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
@@ -37,12 +39,14 @@
     <main class="introducao-bg">
         <div class="introducao container">
             <div class="introducao-conteudo">
-                <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-                <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para
+                <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">Bicicletas feitas sob medida<span
+                        class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-5 fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade,
+                    feitas sob medida para
                     você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+                <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html">Escolha a sua</a>
             </div>
-            <picture>
+            <picture data-anime="800" class="fadeInDown">
                 <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
                 <img src="./img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta.">
             </picture>
@@ -102,7 +106,7 @@
                 </div>
             </div>
             <div class="tecnologia-imagem">
-                <img src="img/fotos/tecnologia.jpg" width="1200" height="1920"  alt="">
+                <img src="img/fotos/tecnologia.jpg" width="1200" height="1920" alt="">
             </div>
         </div>
     </article>
@@ -124,7 +128,8 @@
 
     <section class="depoimento" aria-label="Depoimento">
         <div>
-            <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft" width="1560" height="1360">
+            <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft" width="1560"
+                height="1360">
         </div>
         <div class="depoimento-conteudo">
             <blockquote class="font-1-xl cor-p5">
@@ -205,6 +210,8 @@
         </div>
     </footer>
 
+    <script src="./js/plugins/simple-anime.js"></script>;
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
